--- a/css/body.css
+++ b/css/body.css
@@ -15,7 +15,7 @@ body{
   
 .tebel-sedang {
     font-weight: bold;
-}
+} 
 
 .desc{
     max-width: 400px;
@@ -35,7 +35,7 @@ body{
   }
   
 .button:hover {
-    background-color: #6A69D3;
+    background-color: #3F308E;
     color: white;
 }
   
@@ -57,4 +57,29 @@ body{
   
 .link:hover{
     color:  #6A69D3;
+}
+
+#projects{
+  background-color: #6A69D3;
+  margin-top: 85px;
+  padding-top: 50px;
+  color: white;
+  padding-bottom: 100px;
+}
+
+.card{
+  padding: 3px;
+  margin-top: 20px;
+  color: #6A69D3;
+  font-size: 14px;
+  text-align: center;
+  justify-content: center;
+}
+
+#contact{
+  background-color: #6A69D3;
+  margin-top: 85px;
+  padding-top: 50px;
+  color: white;
+  padding-bottom: 100px;
 }
