--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,7 @@
 }
 
 .bg-custom:hover {
-    background-color: #6A69D3 !important;
+    background-color: #3F308E!important;
     color: #fff !important;
 }
 
