--- a/css/body.css
+++ b/css/body.css
@@ -64,7 +64,7 @@ body{
   margin-top: 85px;
   padding-top: 50px;
   color: white;
-  padding-bottom: 100px;
+  padding-bottom: 100vh;
 }
 
 .card{
@@ -81,5 +81,5 @@ body{
   margin-top: 85px;
   padding-top: 50px;
   color: white;
-  padding-bottom: 100px;
+  padding-bottom: 100vh;
 }
